<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"> myapp </string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnziro">0</string>
    <string name="btnzarb">*</string>
    <string name="btntaghsim">/</string>
    <string name="btnsum">+</string>
    <string name="btnmanfi">-</string>


</resources>
